--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>台中市景點推薦</title>
 	<style>
-		td { text-align: center}
+		td { text-align: center;padding: 20px;}
+		.font1 {font-size: 36px;}
+		.font1 {font-size: 28px;}
+		.font1 {font-size: 20px;}
 		.div1 {font-size: 36px; }
 		.div2 {font-size: 28px; }
 		.div3 {font-size: 20px; }
@@ -13,14 +16,55 @@
 
 		.round_img1 {border-radius: 20px; }
 		.round_img2 {border-radius: 50%; width: 300px; height: 300px; }
+		.font2:hover {font-size: 32px;background-color: black;color: white;}
+		.font2:hover {font-size: 24px;background-color: black;color: white;}
+		.round_img1:hover{ opacity:80%; }
+		.round_img1:hover{ opacity:80%; rotate: -80deg;}
+
+		.navbar {
+		  overflow: hidden;
+		  background-color: #333;
+		  position: fixed; /* Set the navbar to fixed position */
+		  top: 0; /* Position the navbar at the top of the page */
+		  width: 100%; /* Full width */
+		}
+
+		/* Links inside the navbar */
+		.navbar a {
+		  float: left;
+		  display: block;
+		  color: #f2f2f2;
+		  text-align: center;
+		  padding: 14px 16px;
+		  text-decoration: none;
+		  font-size: 17px;
+		}
+
+		/* Change background on mouse-over */
+		.navbar a:hover {
+		  background: lightgray;
+		  color: black;
+		}
 	</style>
+
 </head>
 <body>
+<div class="navbar">
+  <a href="https://youtu.be/G_-SNiuZrJA?si=ZzNe9J73IlhR5WMi">臺中市</a>
+  <a href="https://youtu.be/bVXWBryvcHM?si=bCP2ysJyixSkj2g7">台中國家歌劇院</a>
+  <a href="#t2">臺中州廳</a>
+  <a href="#t3">審計新村</a>
+</div>
+
+
+
 <div class="container">
 	<table>
 		<tr>
 			<td colspan="2">
 				<font class = "div1">
+					<br>
+					<br>
 					台中市景點推薦
 				</font>
 				<br>
@@ -54,7 +98,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img class="round_img2" src="02.jpeg">
+				<img id="t2"class="round_img2" src="02.jpeg">
 			</td>
 			<td>
 				<font class = "div3">
@@ -85,13 +129,18 @@
 				所在位置：台中市西區民生路368巷
 			</td>
 			<td>
-				<img class="round_img2" src="03.jpeg">
+				<img id="t3"class="round_img2" src="03.jpeg">
 
 			</td>
 		</tr>
 		<tr>
 			<td colspan="2">
-				410906529胡展翊
+				<iframe src="https://www.google.com/maps/d/embed?mid=1RjzKNgpOPd8un5265choI72bg74wfUs&ehbc=2E312F" width="1000" height="600"></iframe>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				資科4b 410906529胡展翊 sullyoon的帥哥老公 eunchae&haewon的父親
 			</td>
 		</tr>
 	</table>
